bdr.BDR.scala.error
Compilation error:
BDR:7: error: not found: value getIndication
  cell=getIndication()
       ^